--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.movie"
+        applicationId "com.example.post"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
